<resources>
    <string name="app_name">PAaSdCMFirebaseHotel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_reservacion">Reservación</string>
    <string name="menu_listar_mis_reservaciones_usuario">U Listar Mis Reservaciones</string>
    <string name="menu_listar">Listar</string>
    <string name="menu_mi_hotel">Mi Hotel</string>
    <string name="menu_mis_habitaciones">Mis Habitaciones</string>
    <string name="menu_listar_mis_reservaciones">Listar Mis Reservaciones</string>
    <string name="menu_listar_mis_habitaciones">Listar Mis Habitaciones</string>
    <string name="menu_editar_eliminar_habitaciones">Editar y eliminar Habitaciones</string>

    <string name="menu_editar_mi_perfil">Editar Mi Perfil</string>

    <string name="menu_editar_eliminar_reservaciones">Editar/Eliminar Reservaciones</string>














    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>